강사 교육 페이지 공개상태 변경 API 개설

--- a/views/home_bgn.ejs
+++ b/views/home_bgn.ejs
@@ -273,7 +273,7 @@
                             html+= "          </div>";
                             html+= "          <div class='tour_contents_where'>";
                             html+= "              <span><text>기간</text>"+result.scheduleTourList[i].startdate.substr(0,4)+"."+result.scheduleTourList[i].startdate.substr(4,2)+"."+result.scheduleTourList[i].startdate.substr(6,2)+" ~ "+result.scheduleTourList[i].enddate.substr(0,4)+"."+result.scheduleTourList[i].enddate.substr(4,2)+"."+result.scheduleTourList[i].enddate.substr(6,2)+"</span>";
-                            html+= "              <span><text>장소</text>"+result.tourList[i].place+"</span>";
+                            html+= "              <span><text>장소</text>"+result.scheduleTourList[i].place+"</span>";
                             html+= "          </div>";
                             html+= "          <div class='tour_contents_comment'>"+result.scheduleTourList[i].description+"</div>";
                             html+= "          <div class='tour_contents_etc'>";
